--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -4,9 +4,14 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-physics_test = { workspace = true }
+server-core = { path = "../server-core" }
 
-anyhow = { version = "1.0.*", features = ["backtrace"] }
-bme280 = "0.5.1"
-bme280-multibus = "0.5"
-linux-embedded-hal = "0.4"
+physics_test = { workspace = true }
+anyhow = { workspace = true }
+chrono = { workspace = true }
+
+bme280 = "0.5.*"
+linux-embedded-hal = "0.4.*"
+ureq = { version = "3.0.*", features = ["json"]}
+# reqwest = { version = "0.12.*", features = ["blocking", "json"] }
+# openssl = { version = "0.10.*", features = ["vendored"] }
