--- a/server-core/Cargo.toml
+++ b/server-core/Cargo.toml
@@ -4,4 +4,13 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-serde = "1.0.219"
+physics_test = { workspace = true }
+serde = { workspace = true }
+rusqlite = { workspace = true, optional = true }
+typed_db = { workspace = true, optional = true }
+chrono = { workspace = true }
+
+
+[features]
+# default = ["server"]
+server = ["rusqlite", "typed_db"]
