--- a/thermostat_server.service
+++ b/thermostat_server.service
@@ -8,6 +8,7 @@ User=root
 WorkingDirectory=/home/worker/thermostat
 ExecStart=/bin/bash ./run_server.sh
 SyslogIdentifier=thermostat
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
