--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,8 +14,8 @@ serde = { workspace = true }
 tracing = { workspace = true }
 physics_test = { workspace = true }
 chrono = { workspace = true }
+tracing-subscriber = { workspace = true }
 
 tokio = { version = "1.44.*", features = ["full", "tracing"] }
 tower = { version = "0.5.*", features = ["tokio", "tracing"] }
 tower-http = { version = "0.6.*", features = ["cors", "trace"] }
-tracing-subscriber = { version = "0.3.*", features = ["fmt", "env-filter"] }
