--- a/thermostat_server.service
+++ b/thermostat_server.service
@@ -6,7 +6,7 @@ After=network.target
 Type=simple
 User=root
 WorkingDirectory=/home/worker/thermostat
-ExecStart=/bin/bash ./run_server.sh
+ExecStart=/bin/bash run_server.sh
 SyslogIdentifier=thermostat
 Restart=always
 
